# spectra-ml

./: .gitignore  .gitmodules  augment_dataset.py  copy_paste_transform.py  copy_training_samples.py  data.py  dataset.dvc  eval_yolov8.py  export_tiffs.py  main.py  model.py  predict.py  pyproject.toml  runs.dvc  setup.py  split_yolo.py  train.py  train_yolov8.py
.dvc/: config
coco-viewer/: coco-doctor.py  coco-split.py  cocoviewer.py  correct_annotations.py
conf/: config.yaml
conf/dataset/: custom.yaml
conf/mode/: scratch.yaml  transfer.yaml  transfer_v8seg.yaml  yolos.yaml
conf/model/: yolo_v8_segmentation.yaml  yolos.yaml  yolov8_config.yaml
conf/training/: default.yaml
dataset/: data.yaml
